Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-12-04 Tim
 PATCH: [ 1607193 ] INI Syntax Improvements
  Src/editlib: ini.cpp
 PATCH: [ 1608541 ] Use INI highlighter for VB6 project files
  Src/editlib: ccrystaltextview.cpp

2006-12-06 Kimmo
 Add missing include to fix ANSI build target
  Src: FileOrFolderSelect.cpp

2006-12-04 Kimmo
 PATCH: [ 1512881 ] Fix memleak from charsets.c
  Src: charsets.cp charsets.h Merge.cpp
 PATCH: [ 1607823 ] Remove manifest loading from lang dlls
  Src/Languages/*: Merge*.rc

2006-12-03 Kimmo
 PATCH: [ 1607343 ] Fix filefilter regexp uppercasing for 2.6 branch
  Src: FileFilterMgr.cpp

2006-12-02 Takashi
 BUG: [ 1589324 ] WinMegee crashes on copy
  Src: Common/CShellFileOp.cpp

2006-12-02 Takashi
 BUG: [ 1603077 ] Doesn't filter the file vc60.idb using "Merge_VC_loose.flt"
  Filters: Merge_VC_loose.flt

2006-12-02 Takashi
 BUG: [ 1603061 ] "Copy Left/Right To .." doesn't work correctly
  Src: DirActions.cpp

2006-11-30 Kimmo
 PATCH: [ 1605682 ] Add Syntax Highlight option to config log
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp

2006-11-30 Takashi
 BUG: [ 1603230 ] DirView icons isn't shown correctly on NT4.0
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-28 Kimmo
 PATCH: [ 1603196 ] Allow Open-dialog kind of folder selection for project files
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h OpenDlg.cpp OpenDlg.h
 PATCH: [ 1604078 ] Hide skipped items by default
  Src: OptionsInit.cpp

2006-11-27 Gal
 BUG: [ 1603562 ] Location pane's bar outlines
  Src: LocationView.cpp

2006-11-26 Kimmo
 PATCH: [ 1602365 ] Move SelectFile and SelectFolder routines to separate file
  Src: DirActions.cpp DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp
   Merge.dsp Merge.h MergeDoc.cpp OpenDlg.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp
   PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp