@@ -2,6 +2,14 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-12-07 Kimmo
+ PATCH: [ 1556685 ] Avoid infinite loop in character loop in crystal c++ parser
+  Submitted by Perry
+  Src/editlib: asp.cpp basic.cpp batch.cpp cplusplus.cpp csharp.cpp dcl.cpp fortran.cpp
+   html.cpp innosetup.cpp is.cpp java.cpp lisp.cpp nsis.cpp. pascal.cpp perl.cpp php.cpp
+   python.cpp rexx.cpp rsrc.cpp ruby.cpp sgml.cpp sh.cpp siod.cpp sql.cpp tcl.cpp tex.cpp
+   xml.cpp
+
 2006-12-04 Tim
  PATCH: [ 1607193 ] INI Syntax Improvements
   Src/editlib: ini.cpp
